# ActividadQAOA

./: Actividad QAOA .ipynb  Actividad QAOA-quiskit.ipynb  QAOA.ipynb  QAOA_actividadGrupal_pennylane.ipynb  pyproject.toml  tareaAOgrupal.ipynb
